conmit something test